hphp/hack/test/typecheck/enum_class_label/enum_class_wrong_nested.php.rust_elab.exp
File "enum_class_wrong_nested.php", line 9, characters 8-10:
Invalid label qualifier. Only names or qualified names are allowed at this position. (Parsing[1002])
File "enum_class_wrong_nested.php", line 9, characters 8-10:
Unbound name: `E#A` (an object type) (Naming[2049])
File "enum_class_wrong_nested.php", line 3, characters 12-12:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
