hphp/hack/test/typecheck/enum_class_label/enum_class_wrong_nested.php
<?hh

enum class E : int {
  int A = 42;
  int B = 1664;
}

function main(): void {
  $x = E#A#B;
}
